--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -15,6 +15,7 @@
     "lucide-react": "^0.417.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.25.1",
     "recharts": "^2.12.7"
   },
