--- a/server/observers/browser-observer/manifest.json
+++ b/server/observers/browser-observer/manifest.json
@@ -1,10 +1,21 @@
 {
-    "name": "TimelyGator Browser Observer",
-    "description": "An extension to relay browser events to TimelyGator",
-    "version": "0.1",
-    "manifest_version": 3,
-    "action": {
-        "default_popup": "popup/popup.html",
-        "default_icon": "images/icon.png"
-    }
+  "manifest_version": 3,
+  "name": "TimelyGator Browser Observer",
+  "version": "1.0",
+  "description": "Monitors browser activity and sends data to the TimelyGator server.",
+  "permissions": [
+    "tabs",
+    "activeTab",
+    "storage"
+  ],
+  "host_permissions": [
+    "*://localhost/*"
+  ],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "action": {
+    "default_popup": "popup/popup.html",
+    "default_icon": "images/icon.png"
+  }
 }
