feat: add mkdocs to github workflow

--- a/docs/api/mkdocs.yml
+++ b/docs/api/mkdocs.yml
@@ -1,4 +1,4 @@
 site_name: TimelyGator Docs
-site_url: https://timelygator.github.io/
+site_url: https://timelygator.github.io/timelygator/
 theme:
   name: material
