--- a/.github/workflows/apidocs.yml
+++ b/.github/workflows/apidocs.yml
@@ -26,3 +26,4 @@ jobs:
             mkdocs-material-
       - run: pip install mkdocs-material neoteroi-mkdocs
       - run: mkdocs gh-deploy --force
+        working-directory: docs/
