--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -10,8 +10,10 @@ nav:
     - Sprint 2: sprint/Sprint2.md
     - Sprint 3: sprint/Sprint3.md
     - Sprint 4: sprint/Sprint4.md
+  - Database: database.md
   - Observers:
     - window-observer: observers/window-observer.md
+    - afk-observer: observers/afk-observer.md
   - Frontend - Core Concepts & Features: frontend.md
   - API Reference: api.md
 theme:
