--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -45,7 +45,11 @@ theme:
     - toc.follow
 markdown_extensions:
   - pymdownx.details
-  - pymdownx.superfences
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
   - pymdownx.tabbed:
       alternate_style: true
 extra_css:
